popravil run skripto v package.json

--- a/node_server/package.json
+++ b/node_server/package.json
@@ -4,8 +4,8 @@
   "description": "FERI 2. Letnik - Glavni Projekt",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node index.js"
+    "test": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
